<resources>
    <string name="app_name">Medicine_Reminder_Application</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="medicine_name_hint">Medicine Name</string>
    <string name="dosage_hint">Dosage (e.g. 1 tablet)</string>
    <string name="start_date_text">Start Date: Select</string>
    <string name="end_date_text">End Date: Optional</string>
    <string name="select_days">Select Days</string>
    <string name="add_reminder_time">Add Reminder Time</string>
    <string name="notes_hint">Notes (optional)</string>
    <string name="save_medicine">Save Medicine</string>
    <string name="cancel">Cancel</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="delete_medicine">Delete Medicine</string>

</resources>