<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#F7FFF7"
        android:padding="24dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_medicine"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtMedicineName"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/medicine_name_hint"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/edtDosage"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/dosage_hint"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/txtStartDate"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/start_date_text"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:background="@android:drawable/editbox_background"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/txtEndDate"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/end_date_text"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:background="@android:drawable/editbox_background"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_days"
            android:textStyle="bold"
            android:layout_marginTop="24dp"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            
            <CheckBox
                android:id="@+id/chkMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />

            <CheckBox
                android:id="@+id/chkTue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tue" />

            <CheckBox
                android:id="@+id/chkWed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wed" />

            <CheckBox
                android:id="@+id/chkThu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thu" />

            <CheckBox
                android:id="@+id/chkFri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fri" />

            <CheckBox
                android:id="@+id/chkSat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat" />

            <CheckBox
                android:id="@+id/chkSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun" />
            
        </LinearLayout>

        <Button
            android:id="@+id/btnAddTime"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#097969"
            android:text="@string/add_reminder_time"/>
        
        <LinearLayout
            android:id="@+id/layoutTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"/>
        
        <EditText
            android:id="@+id/edtNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes_hint"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#097969"
            android:text="@string/save_medicine"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#097969"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#097969"
            android:text="@string/delete_medicine"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>
